[package]
name = "tcp-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.8"
prometheus-client = "0.22"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
